--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <title>Cadastro de Funcionários</title>
-</head>
-<body>
-    <h1>Hello Funcionários</>
-</body>
-</html>
+{%  extends 'main/base.html' %}
