--- a/funcionario/templates/funcionario/funcionario_form.html
+++ b/funcionario/templates/funcionario/funcionario_form.html
@@ -2,7 +2,7 @@
 {% block content %}
 <form method="post" xmlns="http://www.w3.org/1999/html">
     {% csrf_token %}
-    {{ form.as_f }}
-    <input type="submit">Salvar</input>
+    {{ form.as_p }}
+    <input type="submit" value="Salvar"></input>
 </form>
 {% endblock content %}
