--- a/funcionario/templates/funcionario/funcionario_list.html
+++ b/funcionario/templates/funcionario/funcionario_list.html
@@ -1,31 +1,40 @@
 {%  extends 'main/base.html' %}
 {% block content %}
-    <a href="{% url 'funcionario.novo' %}">Novo</a>
-    <table>
-        <thead>
-            <tr>
-                <th>Nome Completo</th>
-                <th>CPF</th>
-                <th>Data de Nascimento</th>
-                <th>Cargo</th>
-                <th>Ativa</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for funcionario in object_list %}
-            </tr>
-                <td>{{ funcionario.nome_completo }}</td>
-                <td>{{ funcionario.cpf }}</td>
-                <td>{{ funcionario.data_nascimento|date:"SHORT_DATE_FORMAT" }}</td>
-                <td>{{ funcionario.cargo }}</td>
-                <td>{% if funcionario.ativa %}
-                    Sim
-                    {% else %}
-                    Não
-                    {% endif %}
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+<form method="GET">
+    <input type="text" name="nome" placeholder="Buscar por nome"/>
+    <input type="submit" value="Buscar"/>
+</form>
+<a href="{% url 'funcionario.novo' %}">Novo</a>
+<table>
+    <thead>
+        <tr>
+            <th>Nome Completo</th>
+            <th>CPF</th>
+            <th>Data de Nascimento</th>
+            <th>Cargo</th>
+            <th>Ativa</th>
+            <th>Ações</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for funcionario in object_list %}
+        </tr>
+            <td>{{ funcionario.nome_completo }}</td>
+            <td>{{ funcionario.cpf }}</td>
+            <td>{{ funcionario.data_nascimento|date:"d/m/Y" }}</td>
+            <td>{{ funcionario.cargo }}</td>
+            <td>{% if funcionario.ativa %}
+            Sim
+            {% else %}
+            Não
+            {% endif %}
+            </td>
+            <td>
+                <a href="{% url 'funcionario.atualizar' funcionario.pk %}">Atualizar</a>
+                <a href="{% url 'funcionario.deletar' funcionario.pk %}">Deletar</a>
+            </td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
 {% endblock content %}
