--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+<style>
+    .div-1 {
+        background-color: #EBEBEB;
+    }
+</style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Funcionários</title>
 </head>
 <body>
+    <div class="div-1">  
     <ul>
         <li><a href="{% url 'home' %}">Home</a> </li>
         <li><a href="{% url 'funcionario.index' %}">Funcionários</a> </li>
     </ul>
     {% block content %}
-    {% endblock content %}
+    {% endblock content %} </div>
 </body>
 </html>
