--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<style>
-    .div-1 {
-        background-color: #EBEBEB;
-    }
-</style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +8,13 @@
 </head>
 <body>
     {% include 'main/menu.html' %}
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <li class="{{ message.tags }}">{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
     {% block content %}
     {% endblock content %} 
 </body>
